--- a/Prueba3.2.yaml
+++ b/Prueba3.2.yaml
@@ -16,19 +16,17 @@ system:
       values:
         initial_value: { 1: 1, 2: 2, 3: 3, 4: 4, 5: 5 }
   requests:
-    - endpoint: http://localhost:5000/send
-      times: 6
+    - endpoint: http://localhost:5000/send/0
+      times: 2
       method: POST
-      sleep: 2
+      sleep: 1
       body:
         type: python
         command: "def fibonacci(n):\n\tif n == 0:\n\t\treturn 0\n\telif n == 1:\n\t\treturn 1\n\telse:\n\t\treturn fibonacci(n-1) + fibonacci(n-2)\nresponse = fibonacci(40)"
-    - endpoint: http://localhost:5000/send/0
+    - endpoint: http://localhost:5000/stop/0
       times: 1
       method: POST
       sleep: 0
       body:
         type: python
         command: "if self.node_id == 1:\n\tprint(\"Me voy a suicidar\")\n\texit()\nelse:\n\tprint(\"Sobreviví\")"
-
-      
