--- a/Prueba3-1.yaml
+++ b/Prueba3-1.yaml
@@ -1,8 +1,6 @@
 system:
-  node_quantity: 5
+  node_quantity: 3
   node_capacities:
-    - 5
-    - 5
     - 5
     - 5
     - 5
@@ -11,15 +9,11 @@ system:
       type: List
       values:
         initial_value: [1, 2, 3, 4, 5]
-    - name: shared_dict
-      type: Dict
-      values:
-        initial_value: { 1: 1, 2: 2, 3: 3, 4: 4, 5: 5 }
   requests:
-    - endpoint: http://localhost:5000/send/0
-      times: 2
+    - endpoint: http://localhost:5000/send
+      times: 10
       method: POST
-      sleep: 1
+      sleep: 0
       body:
         type: python
         command: "def fibonacci(n):\n\tif n == 0:\n\t\treturn 0\n\telif n == 1:\n\t\treturn 1\n\telse:\n\t\treturn fibonacci(n-1) + fibonacci(n-2)\nresponse = fibonacci(40)"
@@ -27,6 +21,3 @@ system:
       times: 1
       method: POST
       sleep: 0
-      body:
-        type: python
-        command: "if self.node_id == 1:\n\tprint(\"Me voy a suicidar\")\n\texit()\nelse:\n\tprint(\"Sobreviví\")"
