Auto stash before merge of "main" and "origin/main"

--- a/Prueba3-2.yaml
+++ b/Prueba3-2.yaml
@@ -1,6 +1,8 @@
 system:
-  node_quantity: 3
+  node_quantity: 5
   node_capacities:
+    - 5
+    - 5
     - 5
     - 5
     - 5
@@ -9,11 +11,15 @@ system:
       type: List
       values:
         initial_value: [1, 2, 3, 4, 5]
+    - name: shared_dict
+      type: Dict
+      values:
+        initial_value: { 1: 1, 2: 2, 3: 3, 4: 4, 5: 5 }
   requests:
-    - endpoint: http://localhost:5000/send
-      times: 10
+    - endpoint: http://localhost:5000/send/0
+      times: 2
       method: POST
-      sleep: 0
+      sleep: 1
       body:
         type: python
         command: "def fibonacci(n):\n\tif n == 0:\n\t\treturn 0\n\telif n == 1:\n\t\treturn 1\n\telse:\n\t\treturn fibonacci(n-1) + fibonacci(n-2)\nresponse = fibonacci(40)"
@@ -25,3 +31,6 @@ system:
       times: 1
       method: POST
       sleep: 0
+      body:
+        type: python
+        command: "if self.node_id == 1:\n\tprint(\"Me voy a suicidar\")\n\texit()\nelse:\n\tprint(\"Sobreviví\")"
