--- a/Prueba3-2.yaml
+++ b/Prueba3-2.yaml
@@ -12,10 +12,10 @@ system:
       values:
         initial_value: [1, 2, 3, 4, 5]
   requests:
-    - endpoint: http://localhost:5000/send/0
-      times: 2
+    - endpoint: http://localhost:5000/send
+      times: 6
       method: POST
-      sleep: 1
+      sleep: 2
       body:
         type: python
         command: "def fibonacci(n):\n\tif n == 0:\n\t\treturn 0\n\telif n == 1:\n\t\treturn 1\n\telse:\n\t\treturn fibonacci(n-1) + fibonacci(n-2)\nresponse = fibonacci(40)"
